# cnoid_cgal

./: CMakeLists.txt  README.md  package.xml
example/: convetToBoxes.ipynb  generate_boxes.py  geometry_boolean.ipynb  octomap_sample.ipynb  octomap_sample.py
pybind11/: CMakeLists.txt  PyCGALModule.cpp
python/: CGALUtil.py
src/: CGALUtil.cpp  CGALUtil.h  CnoidCGAL.cpp  CnoidCGAL.h  CnoidOctomap.cpp  CnoidOctomap.h  MergeBoxes.cpp  MergeBoxes.h  exportdecl.h
